--- a/standalone-eks-stack/WorkshopStack.yaml
+++ b/standalone-eks-stack/WorkshopStack.yaml
@@ -6,6 +6,13 @@ Parameters:
     Type: String
     Default: main
     Description: GitHub repository branch
+  IsWorkshopStudioEnv:
+    Type: String
+    Default: "no"
+    AllowedValues:
+      - "no"
+      - "yes"
+    Description: Whether this stack is being deployed in a Workshop Studio environment or not. If not sure, leave as default of "no".
 Resources:
   WSCodeBuildServiceRole6C5B169C:
     Type: AWS::IAM::Role
@@ -142,6 +149,10 @@ Resources:
             Type: PLAINTEXT
             Value:
               Ref: RepoBranchName
+          - Name: IS_WORKSHOP_STUDIO_ENV
+            Type: PLAINTEXT
+            Value:
+              Ref: IsWorkshopStudioEnv
         Image: aws/codebuild/amazonlinux2-x86_64-standard:5.0
         ImagePullCredentialsType: CODEBUILD
         PrivilegedMode: true
