use custom resource instead of wait handle for bootstrapping

--- a/standalone-eks-stack/WorkshopStack.yaml
+++ b/standalone-eks-stack/WorkshopStack.yaml
@@ -134,17 +134,6 @@ Resources:
         Version: "2012-10-17"
       Description: role policy for lambda to trigger codebuild
       Path: /
-  CodeBuildWaitHandle:
-    Type: AWS::CloudFormation::WaitConditionHandle
-  CodeBuildWaitCondition:
-    Type: AWS::CloudFormation::WaitCondition
-    Properties:
-      Count: 1
-      Handle:
-        Ref: CodeBuildWaitHandle
-      Timeout: "10800"
-    DependsOn:
-      - InstallWorkshopStack
   InstallWorkshopStack:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -153,10 +142,6 @@ Resources:
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         EnvironmentVariables:
-          - Name: SIGNAL_URL
-            Type: PLAINTEXT
-            Value:
-              Ref: CodeBuildWaitHandle
           - Name: REPO_URL
             Type: PLAINTEXT
             Value:
@@ -205,16 +190,17 @@ Resources:
                 "commands": [
                   "mkdir workshop && cd workshop",
                   "git clone --single-branch --branch $REPO_BRANCH_NAME $REPO_URL .",
-                  "./manage-workshop-stack.sh $STACK_OPERATION"
+                  "echo $EVENT_REQUEST_TYPE",
+                  "./manage-workshop-stack.sh $EVENT_REQUEST_TYPE"
                 ]
               },
               "post_build": {
                 "commands": [
                   "if [ \"$CODEBUILD_BUILD_SUCCEEDING\" == \"1\" ]; then export STATUS=\"SUCCESS\"; fi",
-                  "if [ \"$CODEBUILD_BUILD_SUCCEEDING\" != \"1\" ]; then export STATUS=\"FAILURE\"; fi",
-                  'export JSON_DATA="{\"Status\" : \"$STATUS\", \"Reason\" : \"Configuration Complete\", \"UniqueId\" : \"ID1234\", \"Data\" : \"Deployment complete.\"}"',
+                  "if [ \"$CODEBUILD_BUILD_SUCCEEDING\" != \"1\" ]; then export STATUS=\"FAILED\"; fi",
+                  'export JSON_DATA="{\"Status\" : \"$STATUS\", \"Reason\" : \"See the details in CloudWatch Log Stream: $CONTEXT_LOG_STREAM_NAME\", \"StackId\" : \"$EVENT_STACK_ID\", \"PhysicalResourceId\" : \"$CONTEXT_LOG_STREAM_NAME\", \"RequestId\" : \"$EVENT_REQUEST_ID\", \"LogicalResourceId\" : \"$EVENT_LOGICAL_RESOURCE_ID\" }"',
                   'echo "$JSON_DATA"',
-                  "curl -X PUT --data-binary \"$JSON_DATA\" \"$SIGNAL_URL\""
+                  "curl -X PUT --data-binary \"$JSON_DATA\" \"$EVENT_RESPONSE_URL\""
                 ]
               }
             }
@@ -223,7 +209,7 @@ Resources:
       Cache:
         Type: NO_CACHE
       EncryptionKey: alias/aws/s3
-      TimeoutInMinutes: 180
+      TimeoutInMinutes: 60
   TriggerCodeBuild:
     Type: AWS::Lambda::Function
     Properties:
@@ -231,7 +217,6 @@ Resources:
         ZipFile: |-
           import boto3
           import os
-          import cfnresponse
 
           def lambda_handler(event, context):
               print(event)
@@ -239,13 +224,37 @@ Resources:
               cb_cli = boto3.client("codebuild")
               cb_env_vars = [
                   {
-                      'name': 'STACK_OPERATION',
+                      'name': 'EVENT_REQUEST_TYPE',
                       'value': event['RequestType'],
+                      'type': 'PLAINTEXT'
+                  },
+                  {
+                      'name': 'EVENT_REQUEST_ID',
+                      'value': event['RequestId'],
+                      'type': 'PLAINTEXT'
+                  },
+                  {
+                      'name': 'EVENT_STACK_ID',
+                      'value': event['StackId'],
+                      'type': 'PLAINTEXT'
+                  },
+                  {
+                      'name': 'EVENT_LOGICAL_RESOURCE_ID',
+                      'value': event['LogicalResourceId'],
+                      'type': 'PLAINTEXT'
+                  },
+                  {
+                      'name': 'EVENT_RESPONSE_URL',
+                      'value': event['ResponseURL'],
+                      'type': 'PLAINTEXT'
+                  },
+                  {
+                      'name': 'CONTEXT_LOG_STREAM_NAME',
+                      'value': context.log_stream_name,
                       'type': 'PLAINTEXT'
                   },
               ]
               cb_cli.start_build(projectName=project_name, environmentVariablesOverride=cb_env_vars)
-              cfnresponse.send(event, context, cfnresponse.SUCCESS, {"Response": "Success"})
       Role:
         Fn::GetAtt:
           - CodeBuildTriggerLambdaRole
@@ -259,7 +268,7 @@ Resources:
       Timeout: 900
     DependsOn:
       - CodeBuildTriggerLambdaRole
-  CustomResourceLambda:
+  CustomProvisioningResource:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken:
