--- a/lib/product/app/code/requirements.txt
+++ b/lib/product/app/code/requirements.txt
@@ -1,8 +1,9 @@
-aws-xray-sdk~=2.10.0
-boto3~=1.24.72
-botocore~=1.27.72
-Flask~=2.2.2
-gunicorn~=20.1.0
-PyJWT~=2.4.0
+aws-embedded-metrics~=3.2.0
+aws-xray-sdk~=2.12.0
+boto3~=1.28.59
+botocore~=1.31.59
+Flask~=2.3.3
+gunicorn~=21.2.0
+PyJWT~=2.8.0
 python-dateutil~=2.8.2
-requests~=2.28.1
+requests~=2.31.0
