--- a/lib/shared/requirements.txt
+++ b/lib/shared/requirements.txt
@@ -1,5 +1,6 @@
-PyJWT~=2.4.0
-boto3~=1.24.72
-botocore~=1.27.72
-requests~=2.28.1
-Flask~=2.2.2
+aws-embedded-metrics~=3.2.0
+PyJWT~=2.8.0
+boto3~=1.28.59
+botocore~=1.31.59
+requests~=2.31.0
+Flask~=2.3.3
