fix up minor issues with cwagent, add xray sampling json file and create shared stack

--- a/lib/product/app/Dockerfile
+++ b/lib/product/app/Dockerfile
@@ -1,4 +1,5 @@
-FROM public.ecr.aws/docker/library/python:3.9.14-slim-bullseye
+ARG BASE_IMAGE
+FROM ${BASE_IMAGE}
 
 ENV APP_USER=app
 ENV APP_DIR=/home/${APP_USER}/code
