lab1 init changes

--- a/lib/product/app/Dockerfile
+++ b/lib/product/app/Dockerfile
@@ -1,12 +1,14 @@
-ARG BASE_IMAGE="public.ecr.aws/docker/library/python:3.9.14-slim-bullseye"
-FROM ${BASE_IMAGE}
+FROM public.ecr.aws/docker/library/python:3.9.14-slim-bullseye
+
+# ARG BASE_IMAGE="public.ecr.aws/docker/library/python:3.9.14-slim-bullseye"
+# FROM ${BASE_IMAGE}
 
 ENV APP_USER=app
 ENV APP_DIR=/home/${APP_USER}/code
 ENV APP_SHARED_DIR=${APP_DIR}/shared
 
 USER root
-RUN apt-get update && apt-get install -y curl unzip
+# RUN apt-get update && apt-get install -y curl unzip
 RUN useradd -m $APP_USER && mkdir -p $APP_SHARED_DIR && chown "${APP_USER}:${APP_USER}" -R $APP_DIR || echo "user already exists"
 USER $APP_USER
 
