--- a/standalone-eks-stack/WorkshopStack.yaml
+++ b/standalone-eks-stack/WorkshopStack.yaml
@@ -57,46 +57,7 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
             Effect: Allow
-            Resource:
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: InstallWorkshopStack
-              - Fn::Join:
-                  - ""
-                  - - "arn:"
-                    - Ref: AWS::Partition
-                    - ":logs:"
-                    - Ref: AWS::Region
-                    - ":"
-                    - Ref: AWS::AccountId
-                    - :log-group:/aws/codebuild/
-                    - Ref: InstallWorkshopStack
-          - Action:
-              - codebuild:CreateReportGroup
-              - codebuild:CreateReport
-              - codebuild:UpdateReport
-              - codebuild:BatchPutTestCases
-              - codebuild:BatchPutCodeCoverages
-            Effect: Allow
-            Resource:
-              Fn::Join:
-                - ""
-                - - "arn:"
-                  - Ref: AWS::Partition
-                  - ":codebuild:"
-                  - Ref: AWS::Region
-                  - ":"
-                  - Ref: AWS::AccountId
-                  - :report-group/
-                  - Ref: InstallWorkshopStack
-                  - -*
+            Resource: !GetAtt InstallWorkshopStackLogGroup.Arn
         Version: "2012-10-17"
       PolicyName: WSCodeBuildServiceRoleDefaultPolicy
       Roles:
@@ -130,14 +91,26 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
             Effect: Allow
-            Resource:
-              - !GetAtt TriggerCodeBuildLogGroup.Arn
+            Resource: !GetAtt TriggerCodeBuildLogGroup.Arn
         Version: "2012-10-17"
       Description: role policy for lambda to trigger codebuild
       Path: /
   TriggerCodeBuildLogGroup:
       Type: AWS::Logs::LogGroup
       Properties:
+        LogGroupName: "/aws/lambda/trigger-codebuild-function"
+        RetentionInDays: 7
+      DeletionPolicy: 'Delete'
+      UpdateReplacePolicy: 'Delete'
+      Metadata:
+        cfn_nag:
+          rules_to_suppress:
+            - id: W84
+              reason: 'Default encryption (not AWS KMS) used for this sample'
+  InstallWorkshopStackLogGroup:
+      Type: AWS::Logs::LogGroup
+      Properties:
+        LogGroupName: "/aws/codebuild/install-workshop-stack-codebuild"
         RetentionInDays: 7
       DeletionPolicy: 'Delete'
       UpdateReplacePolicy: 'Delete'
@@ -149,6 +122,7 @@ Resources:
   InstallWorkshopStack:
     Type: AWS::CodeBuild::Project
     Properties:
+      Name: "install-workshop-stack-codebuild"
       Artifacts:
         Type: NO_ARTIFACTS
       Environment:
@@ -232,8 +206,7 @@ Resources:
           - id: W58
             reason: 'Permission to write CloudWatch Logs added to role'
     Properties:
-      LoggingConfig:
-        LogGroup: !Ref TriggerCodeBuildLogGroup
+      FunctionName: "trigger-codebuild-function"
       Code:
         ZipFile: |-
           import boto3
