--- a/standalone-eks-stack/package.json
+++ b/standalone-eks-stack/package.json
@@ -3,14 +3,14 @@
   "packageManager": "yarn@3.8.5",
   "version": "0.1.0",
   "devDependencies": {
-    "@types/node": "^20.11.25",
+    "@types/node": "^22.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "@aws-quickstart/eks-blueprints": "~1.15.1",
-    "aws-cdk": "2.147.3",
-    "aws-cdk-lib": "2.147.3",
+    "@aws-quickstart/eks-blueprints": "^1.16.0",
+    "aws-cdk": "2.162.1",
+    "aws-cdk-lib": "2.162.1",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
